docs-archive/apache-airflow-providers-google/22.7.0/_sources/_api/tests/system/google/cloud/gcs/example_gcs_to_gdrive/index.rst.txt
tests.system.google.cloud.gcs.example_gcs_to_gdrive
===================================================

.. py:module:: tests.system.google.cloud.gcs.example_gcs_to_gdrive

.. autoapi-nested-parse::

   Example DAG using GoogleCloudStorageToGoogleDriveOperator.

   Using this operator requires the following additional scopes:
   https://www.googleapis.com/auth/drive



Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.gcs.example_gcs_to_gdrive.ENV_ID
   tests.system.google.cloud.gcs.example_gcs_to_gdrive.PROJECT_ID
   tests.system.google.cloud.gcs.example_gcs_to_gdrive.FOLDER_ID
   tests.system.google.cloud.gcs.example_gcs_to_gdrive.DAG_ID
   tests.system.google.cloud.gcs.example_gcs_to_gdrive.IS_COMPOSER
   tests.system.google.cloud.gcs.example_gcs_to_gdrive.RESOURCES_BUCKET_NAME
   tests.system.google.cloud.gcs.example_gcs_to_gdrive.BUCKET_NAME
   tests.system.google.cloud.gcs.example_gcs_to_gdrive.CONNECTION_ID
   tests.system.google.cloud.gcs.example_gcs_to_gdrive.TMP_PATH
   tests.system.google.cloud.gcs.example_gcs_to_gdrive.WORK_DIR
   tests.system.google.cloud.gcs.example_gcs_to_gdrive.CURRENT_FOLDER
   tests.system.google.cloud.gcs.example_gcs_to_gdrive.LOCAL_PATH
   tests.system.google.cloud.gcs.example_gcs_to_gdrive.FILE_LOCAL_PATH
   tests.system.google.cloud.gcs.example_gcs_to_gdrive.FILE_NAME
   tests.system.google.cloud.gcs.example_gcs_to_gdrive.GDRIVE_SECRET_ID
   tests.system.google.cloud.gcs.example_gcs_to_gdrive.log
   tests.system.google.cloud.gcs.example_gcs_to_gdrive.test_run


Functions
---------

.. autoapisummary::

   tests.system.google.cloud.gcs.example_gcs_to_gdrive.get_shared_drive_id


Module Contents
---------------

.. py:data:: ENV_ID

.. py:data:: PROJECT_ID

.. py:data:: FOLDER_ID

.. py:data:: DAG_ID
   :value: 'gcs_to_gdrive'


.. py:data:: IS_COMPOSER

.. py:data:: RESOURCES_BUCKET_NAME
   :value: 'airflow-system-tests-resources'


.. py:data:: BUCKET_NAME

.. py:data:: CONNECTION_ID

.. py:data:: TMP_PATH
   :value: 'tmp'


.. py:data:: WORK_DIR

.. py:data:: CURRENT_FOLDER

.. py:data:: LOCAL_PATH
   :value: ''


.. py:data:: FILE_LOCAL_PATH
   :value: ''


.. py:data:: FILE_NAME
   :value: 'example_upload.txt'


.. py:data:: GDRIVE_SECRET_ID
   :value: 'gdrive_shared_folder_id'


.. py:data:: log

.. py:function:: get_shared_drive_id()

.. py:data:: test_run

